# ecoscope-hub

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
dev/: activate.sh
environment-setup/: pixi-base.toml
publish/: build.sh
publish/recipes/release/: wt.yaml
resources/: ecoscope_main_branch_rules.json
wt/: README.md  __init__.py  __main__.py  auth.py  cli.py  pyproject.toml
wt/commands/: __init__.py  create.py
wt/ui/: __init__.py  console.py
